--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <header
             class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
             <div class="col-md-3 mb-2 mb-md-0">
-                {{!-- <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-                  <div>
-                    Website Name
-                  </div>
-                </a> --}}
+                <!-- <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+                    <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap">
+                        <use xlink:href="#bootstrap"></use>
+                    </svg>
+                </a> -->
                 <div class="p-3">
                     Website Name
                 </div>
@@ -39,7 +39,7 @@
                 {{/if}}
                 <button type="button" class="btn btn-primary">Sign-up</button>
             </div>
-            {{!-- <div class="dropdown text-end">
+             <!-- <div class="dropdown text-end">
                 <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
                     data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
@@ -53,9 +53,9 @@
                     </li>
                     <li><a class="dropdown-item" href="#">Sign out</a></li>
                 </ul>
-            </div> --}}
+            </div>  -->
         </header>
-     
+      
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
