--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous" />
-        {{!-- changed the stylesheet name and added some custom fonts --}}
+        <!-- {{!-- changed the stylesheet name and added some custom fonts --}} -->
         <link href="/public/css/custom.css" type="text/css" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
+        <script src="https://kit.fontawesome.com/b52e995b7a.js" crossorigin="anonymous"></script>
     </head>
 
 
@@ -26,19 +27,19 @@
         <header
             class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
             <div class="col-md-3 mb-2 mb-md-0">
-                {{! <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+                <!-- {{! <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
                     <div>
                         Website Name
                     </div>
-                </a> }}
-                <div class="p-3">
+                </a> }} -->
+                <div class="h3 p-3">
                     Website Name
                 </div>
             </div>
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-                <li><a href="#" class="nav-link px-2">Participate in the Storytelling</a></li>
+                <li><a href="/createstory" class="nav-link px-2">Participate in the Storytelling</a></li>
                 <li><a href="#" class="nav-link px-2">Archive</a></li>
                 <li><a href="#" class="nav-link px-2">FAQs</a></li>
                 <li><a href="#" class="nav-link px-2">About</a></li>
@@ -48,17 +49,17 @@
                 {{#if loggedIn}}
                 <button type="button" id="logout" class="btn btn-outline-primary me-2">Logout</button>
                 {{else}}
-                <button type="button" id="login" class="btn btn-outline-primary me-2">Login</button>
+                <a href="/login" class="btn btn-outline-primary me-2">Login</a>
                 {{/if}}
                 <button type="button" class="btn btn-primary me-3">Sign-up</button>
             </div>
-            {{! <div class="dropdown text-end">
+            <div class="dropdown text-end mx-3">
                 <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
                     data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                    <i class="fa-solid fa-user"></i>
                 </a>
                 <ul class="dropdown-menu text-small" style="">
-                    <li><a class="dropdown-item" href="#">New project...</a></li>
+                    <li><a class="dropdown-item" href="/createstory">New project...</a></li>
                     <li><a class="dropdown-item" href="#">Settings</a></li>
                     <li><a class="dropdown-item" href="#">Profile</a></li>
                     <li>
@@ -66,7 +67,7 @@
                     </li>
                     <li><a class="dropdown-item" href="#">Sign out</a></li>
                 </ul>
-            </div> }}
+            </div> 
         </header>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
