--- a/index.html
+++ b/index.html
@@ -3,23 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>Project 2</title>
-
-    <head>
-        <meta charset="UTF-8" />
-        <title>Project 2</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-            crossorigin="anonymous" />
-        <!-- {{!-- changed the stylesheet name and added some custom fonts --}} -->
-        <link href="/public/css/custom.css" type="text/css" rel="stylesheet" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
-        <script src="https://kit.fontawesome.com/b52e995b7a.js" crossorigin="anonymous"></script>
-    </head>
-
-
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel='stylesheet' href='/public/css/custom.css' />
 </head>
 
 <body>
@@ -27,11 +13,6 @@
         <header
             class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
             <div class="col-md-3 mb-2 mb-md-0">
-                <!-- {{! <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-                    <div>
-                        Website Name
-                    </div>
-                </a> }} -->
                 <div class="h3 p-3">
                     Website Name
                 </div>
@@ -67,171 +48,62 @@
                     </li>
                     <li><a class="dropdown-item" href="#">Sign out</a></li>
                 </ul>
-            </div> 
+            </div>
         </header>
 
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet" />
-
-        <div class="container justify-content-center">
-            <div class="row align-items-end p-5 g-5">
-                <div class="col-md-6">
-                    <div class="card playing-card">
-                        <div class="card-body">
-                            <h2 class="card-text text-center playgame-padding" id="courgette-regular">Rapid Fire Round
-                            </h2>
-                            <p class="text-center playgame-padding">Think on your feet! <br> In this mode, you will have
-                                a
-                                time limit and word limit. <br> Write what comes to mind and see where the story takes
-                                you
-                                and the other players.</p>
-                            <div class="d-flex justify-content-center">
-                                <button type="button" class="btn btn-success mx-auto p-2 " style="width: 150px"
-                                    data-bs-toggle="modal" data-bs-target="#exampleModalRapid" id="rapid-fire">Let's
-                                    Go!</button>
-                                <div class="modal fade" id="exampleModalRapid" tabindex="-1"
-                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h1 class="modal-title fs-5 text-center w-100" id="exampleModalLabel">
-                                                    Would
-                                                    you like to start a new story <br> or jump into an ongoing tale?
-                                                </h1>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <div
-                                                    class="d-flex justify-content-center align-items-center w-100 p-5 g-5">
-                                                    <button type="button" class="btn btn-success mx-2"
-                                                        id="rapid-start-new">Start New</button>
-                                                    <button type="button" class="btn btn-primary mx-2"
-                                                        id="rapid-ongoing">Join Ongoing
-                                                        Story</button>
-                                                </div>
-                                            </div>
-                                            <div class="modal-footer">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+        <form id="registerForm" class="d-flex justify-content-center align-items-center" style="margin-top: 50px">
+            <div class="card text-center" style="width: 18rem; border: 2px solid #6c757d; border-radius: 20px; margin-top: 100px;">
+              <div class="card-body">
+                <h4 class="card-title pt-2 mb-2">Create a new account:</h4>
+                <h6 class="card-subtitle fst-italic mb-4 mt-0 text-body-secondary">Please fill out the form below</h6>
+                <div style="padding: 20px;" class="form-group">
+                  <label for="inputUsername">
+                    <h3>Username</h3>
+                  </label>
+                  <input type="text" class="form-control" id="inputUsername" aria-describedby="usernameHelp" placeholder="Enter new username">
                 </div>
-                <div class="col-md-6">
-                    <div class="card playing-card">
-                        <div class="card-body">
-                            <h2 class="card-text text-center playgame-padding" id="courgette-regular">Adventure Mode
-                            </h2>
-                            <p class="text-center playgame-padding">Here be dragons. <br> And werewolves, and who knows
-                                that
-                                else! Only you know. <br> In this mode you will have a much longer word limit and no
-                                time
-                                limit to complete prompts.</p>
-                            <div class="d-flex justify-content-center">
-                                <button type="button" class="btn btn-success mx-auto p-2" style="width: 150px"
-                                    data-bs-toggle="modal" data-bs-target="#exampleModalAdventure"
-                                    id="adventure-mode">Play</button>
-                                <div class="modal fade" id="exampleModalAdventure" tabindex="-1"
-                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h1 class="modal-title fs-5 text-center w-100" id="exampleModalLabel">
-                                                    Would
-                                                    you like to start a new story <br> or jump into an ongoing tale?
-                                                </h1>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <div
-                                                    class="d-flex justify-content-center align-items-center w-100 p-5 g-5">
-                                                    <button type="button" class="btn btn-success mx-2"
-                                                        id="adventure-mode-startnew">Start New</button>
-                                                    <button type="button" class="btn btn-primary mx-2"
-                                                        id="adventure-mode-ongoing">Join Ongoing
-                                                        Story</button>
-                                                </div>
-                                            </div>
-                                            <div class="modal-footer">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div style="padding: 20px;" class="form-group">
+                  <label for="inputEmail">
+                    <h3>Email address</h3>
+                  </label>
+                  <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter new email">
                 </div>
+                <div class="justify-content-center align-items-center mt-3">
+                  <div class="text-center">
+                    <label for="inputPassword" class="form-label">
+                      <h3>Password</h3>
+                    </label>
+                  </div>
+                  <div class="col-auto">
+                    <input type="password" id="inputPassword" class="form-control" aria-describedby="passwordHelpInline" placeholder="Enter new Password">
+                  </div>
+                  <div class="col-auto mt-3">
+                    <span id="passwordHelpInline" class="form-text">
+                      Must be at least 6 characters long.
+                    </span>
+                  </div>
+                </div>
+          
+                <div class="submit d-flex justify-content-center mt-4" id="create-account-btn">
+                  <button type="submit" class="btn btn-success p-2">Create Account</button>
+                </div>
+              </div>
             </div>
-        </div>
-    </div>
+          </form>
+          
+          <script src="/js/register.js"></script>
 
-    <script src="public/js/createStory.js"></script>
 
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="/public/js/logout.js"></script>
-    <script src="/public/js/login.js"></script>
-    <div class="py-5">
-        <div class="container justify-content-center">
-            <div class="row align-items-center p-5 g-5">
-                <div class="col-md-4">
-                    <div class="card" >
-                        <a href="/story/{{id}}">
-                            <div class="card-body">
-                                <h5 class="card-title">{{title}}</h5>
-                                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                                <p class="card-text">{{segment}}.</p>
-                                <a href="#" class="card-link">Card link</a>
-                                <a href="#" class="card-link">Another link</a>
-                            </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card" >
-                        <a href="/story/{{id}}">
-                            <div class="card-body">
-                                <h5 class="card-title">{{title}}</h5>
-                                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                                <p class="card-text">{{segment}}.</p>
-                                <a href="#" class="card-link">Card link</a>
-                                <a href="#" class="card-link">Another link</a>
-                            </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card" >
-                        <a href="/story/{{id}}">
-                            <div class="card-body">
-                                <h5 class="card-title">{{title}}</h5>
-                                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                                <p class="card-text">{{segment}}.</p>
-                                <a href="#" class="card-link">Card link</a>
-                                <a href="#" class="card-link">Another link</a>
-                            </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <a href="/story/{{id}}">
-                            <div class="card-body">
-                                <h5 class="card-title">{{title}}</h5>
-                                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                                <p class="card-text">{{segment}}.</p>
-                                <a href="#" class="card-link">Card link</a>
-                                <a href="#" class="card-link">Another link</a>
-                            </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
+
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                crossorigin="anonymous"></script>
+
+            <script src="/public/js/logout.js"></script>
+            <script src="/public/js/login.js"></script>
+
 
 
 </body>
