Start add styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div>
         <header
-            class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+            class="d-flex flex-wrap align-items-center justify-content-center py-3 mb-4 border-bottom">
             <div class="col-md-3 mb-2 mb-md-0">
                 <div class="h3 p-3">
                     Website Name
@@ -21,9 +21,9 @@
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
                 <li><a href="/createstory" class="nav-link px-2">Participate in the Storytelling</a></li>
-                <li><a href="#" class="nav-link px-2">Archive</a></li>
+                <!-- <li><a href="#" class="nav-link px-2">Archive</a></li>
                 <li><a href="#" class="nav-link px-2">FAQs</a></li>
-                <li><a href="#" class="nav-link px-2">About</a></li>
+                <li><a href="#" class="nav-link px-2">About</a></li> -->
             </ul>
 
             <div class="col-md-3 text-end">
