--- a/index.html
+++ b/index.html
@@ -8,102 +8,93 @@
     <link rel='stylesheet' href='/public/css/custom.css' />
 </head>
 
-<body>
-    <div>
-        <header
-            class="d-flex flex-wrap align-items-center justify-content-center py-3 mb-4 border-bottom">
-            <div class="col-md-3 mb-2 mb-md-0">
-                <div class="h3 p-3">
-                    Website Name
+
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet" />
+
+<h1 class="text-center b-5 mb-4" id="courgette-regular">Welcome to the Adventure Zone!</h1>
+<!-- fix this id so it is a class to be reused i am using it in multiple places -->
+<h4 class="text-center mb-4">You chose to start a new story</h4>
+<h6 class="text-center mb-5">Let's breakdown the gameplay again. <br> You will get a prompt containing a genre and a place and be able to write anything that comes to mind to fill out that prompt. <br>
+    When you hit submit, your contribution will be posted to the story thread and someone else will pick up from there!
+</h6>
+
+    <div class="container justify-content-center align-items-center w-50">
+<div class="card text-center w-50" id="prompt-container">
+    <div class="card-header" id="prompt-title">
+        Here's your prompt:
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">{{ randomGenre }}</h5>
+      <p class="card-text">{{ randomPrompt }}</p>
+      <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalOpen" id="open-modal">Go somewhere</a>
+    </div>
+    <div class="card-footer text-body-secondary">
+      Happy Writing
+    </div>
+  </div>
+  </div>
+
+  <div class="modal fade" id="exampleModalOpen" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Go wild literary fiends!</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <!-- Quill CSS link -->
+                <link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" rel="stylesheet" />
+                <!-- Quill editor container -->
+                <div id="editor">
+                    <p>Begin writing here!</p>
+                    <p>Feel free to <strong>jazz it up</strong> as you wish</p>
+                    <p><br /></p>
                 </div>
             </div>
-
-            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-                <li><a href="/createstory" class="nav-link px-2">Participate in the Storytelling</a></li>
-                <!-- <li><a href="#" class="nav-link px-2">Archive</a></li>
-                <li><a href="#" class="nav-link px-2">FAQs</a></li>
-                <li><a href="#" class="nav-link px-2">About</a></li> -->
-            </ul>
-
-            <div class="col-md-3 text-end">
-                {{#if loggedIn}}
-                <button type="button" id="logout" class="btn btn-outline-primary me-2">Logout</button>
-                {{else}}
-                <a href="/login" class="btn btn-outline-primary me-2">Login</a>
-                {{/if}}
-                <button type="button" class="btn btn-primary me-3">Sign-up</button>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Save for later</button>
+                <button type="button" class="btn btn-primary">Submit</button>
             </div>
-            <div class="dropdown text-end mx-3">
-                <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fa-solid fa-user"></i>
-                </a>
-                <ul class="dropdown-menu text-small" style="">
-                    <li><a class="dropdown-item" href="/createstory">New project...</a></li>
-                    <li><a class="dropdown-item" href="#">Settings</a></li>
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
-                </ul>
-            </div>
-        </header>
+        </div>
+    </div>
+</div>
 
-        <form id="registerForm" class="d-flex justify-content-center align-items-center" style="margin-top: 50px">
-            <div class="card text-center" style="width: 18rem; border: 2px solid #6c757d; border-radius: 20px; margin-top: 100px;">
-              <div class="card-body">
-                <h4 class="card-title pt-2 mb-2">Create a new account:</h4>
-                <h6 class="card-subtitle fst-italic mb-4 mt-0 text-body-secondary">Please fill out the form below</h6>
-                <div style="padding: 20px;" class="form-group">
-                  <label for="inputUsername">
-                    <h3>Username</h3>
-                  </label>
-                  <input type="text" class="form-control" id="inputUsername" aria-describedby="usernameHelp" placeholder="Enter new username">
-                </div>
-                <div style="padding: 20px;" class="form-group">
-                  <label for="inputEmail">
-                    <h3>Email address</h3>
-                  </label>
-                  <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter new email">
-                </div>
-                <div class="justify-content-center align-items-center mt-3">
-                  <div class="text-center">
-                    <label for="inputPassword" class="form-label">
-                      <h3>Password</h3>
-                    </label>
-                  </div>
-                  <div class="col-auto">
-                    <input type="password" id="inputPassword" class="form-control" aria-describedby="passwordHelpInline" placeholder="Enter new Password">
-                  </div>
-                  <div class="col-auto mt-3">
-                    <span id="passwordHelpInline" class="form-text">
-                      Must be at least 6 characters long.
-                    </span>
-                  </div>
-                </div>
-          
-                <div class="submit d-flex justify-content-center mt-4" id="create-account-btn">
-                  <button type="submit" class="btn btn-success p-2">Create Account</button>
-                </div>
-              </div>
-            </div>
-          </form>
-          
-          <script src="/js/register.js"></script>
+  
+  <!-- script stays outside -->
+  <!-- Include the Quill library -->
+  <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
+  
+  <!-- Initialize Quill editor -->
+  <script>
+    const quill = new Quill('#editor', {
+        modules: {
+            history: {
+                delay: 1000,
+                maxStack: 500,
+                maxLength: 1500,
+                userOnly: true,
+            }
+        },
+      theme: 'snow'
+    });
+  </script>
+
+  
+  <!-- script stays outside -->
+  <!-- Include the Quill library -->
+  <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
+  
+  <!-- Initialize Quill editor -->
+  <script>
+    const quill = new Quill('#editor', {
+      theme: 'snow'
+    });
+  </script>
 
 
-
-
-
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-                crossorigin="anonymous"></script>
-
-            <script src="/public/js/logout.js"></script>
-            <script src="/public/js/login.js"></script>
-
+<script src="public/js/createStory.js"></script>
 
 
 </body>
